--- a/src/FCG.Users.API/FCG.Users.API.csproj
+++ b/src/FCG.Users.API/FCG.Users.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FCG.Shared" Version="1.0.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
@@ -22,9 +23,6 @@
   <ItemGroup>
     <ProjectReference Include="..\FCG.Users.Application\FCG.Users.Application.csproj" />
     <ProjectReference Include="..\FCG.Users.Infrastructure\FCG.Users.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\..\FCG.Shared\FCG.Shared.csproj" />
-    <!-- <ProjectReference Include="..\FCG.Users.Domain\FCG.Users.Domain.csproj" />
-    <ProjectReference Include="..\FCG.Users.Infrastructure\FCG.Users.Infrastructure.csproj" /> -->
   </ItemGroup>
 
 </Project>
