--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,4 +22,7 @@ jobs:
                   context: ./FCG-Users-Service
                   file: ./FCG-Users-Service/Dockerfile
                   push: true
+                  # Injeta o token do GitHub como uma variável de build
+                  build-args: |
+                      GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
                   tags: ${{ secrets.DOCKERHUB_USERNAME }}/fcg-users-api:latest
