--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,10 +7,16 @@ on:
 jobs:
     deploy:
         runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
+        # IMPORTANTE: Permissão para ler pacotes do GitHub
+        permissions:
+            contents: read
+            packages: read
 
-            - name: Login to Docker Hub
+        steps:
+            - name: Checkout do Código
+              uses: actions/checkout@v4
+
+            - name: Login no Docker Hub
               uses: docker/login-action@v3
               with:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -22,7 +28,7 @@ jobs:
                   context: .
                   file: ./Dockerfile
                   push: true
-                  # Injeta o token do GitHub como uma variável de build
+                  # Injeta o token automático do GitHub para o Docker usar no 'dotnet restore'
                   build-args: |
                       GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
                   tags: ${{ secrets.DOCKERHUB_USERNAME }}/fcg-users-api:latest
