--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,11 @@ jobs:
 
       - name: Configurar NuGet para GitHub Packages
         run: |
-          dotnet nuget add source "https://nuget.pkg.github.com/dokatec/index.json" 
-            --name github 
-            --username dokatec 
-            --password ${{ secrets.GITHUB_TOKEN }} 
+          dotnet nuget remove source github || true
+          dotnet nuget add source "https://nuget.pkg.github.com/dokatec/index.json" \
+            --name github \
+            --username dokatec \
+            --password ${{ secrets.GITHUB_TOKEN }} \
             --store-password-in-clear-text
 
       - name: Restore dependencies
