Criado: criando repositorio

--- a/src/FCG.Users.API/appsettings.json
+++ b/src/FCG.Users.API/appsettings.json
@@ -6,7 +6,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=fcg_users_db;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=fcg-postgres;Database=fcg_users_db;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
