Criado: criando repositorio

--- a/nuget.config
+++ b/nuget.config
@@ -4,10 +4,10 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="GitHub" value="https://nuget.pkg.github.com/dokatec/index.json" />
   </packageSources>
-  <!-- <packageSourceCredentials>
+  <packageSourceCredentials>
     <GitHub>
       <add key="Username" value="dokatec" />
       <add key="ClearTextPassword" value="%GH_TOKEN%" />
     </GitHub>
-  </packageSourceCredentials> -->
+  </packageSourceCredentials>
 </configuration>
