Update: atualizando projeto

--- a/src/FCG.Users.API/appsettings.json
+++ b/src/FCG.Users.API/appsettings.json
@@ -6,8 +6,9 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=fcg_users_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Server=tcp:fcg-database.database.windows.net,1433;Database=fiap-cloud-gamer;Authentication=Active Directory Default;"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
