update: atualizando api

--- a/src/FCG.Users.API/appsettings.json
+++ b/src/FCG.Users.API/appsettings.json
@@ -6,7 +6,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:fcg-database.database.windows.net,1433;Database=fiap-cloud-gamer;Authentication=Active Directory Default;"
+    "DefaultConnection": "Host=localhost;Database=fcg_users_db;Username=postgres;Password=postgres"
   },
 
   "Logging": {
