--- a/src/FCG.Users.API/FCG.Users.API.csproj
+++ b/src/FCG.Users.API/FCG.Users.API.csproj
@@ -15,7 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
   <PackageReference Include="Microsoft.OpenApi" Version="1.6.22" />
   <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
 <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
