update: atualizando api

--- a/src/FCG.Users.API/appsettings.Development.json
+++ b/src/FCG.Users.API/appsettings.Development.json
@@ -1,8 +1,19 @@
 {
+  "Jwt": {
+    "Key": "SUA_CHAVE_SUPER_SECRETA_AQUI",
+    "Issuer": "FCG.Api",
+    "Audience": "FCG.Api"
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=fcg-cloud-gamer-db.c960e8mkw50l.sa-east-1.rds.amazonaws.com;Database=fcg_users_db;Username=postgres;Password=postgres"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
