--- a/src/FCG.Users.API/appsettings.json
+++ b/src/FCG.Users.API/appsettings.json
@@ -6,7 +6,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=fcg_users_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=fcg-cloud-gamer-db.c960e8mkw50l.sa-east-1.rds.amazonaws.com;Database=fcg_users_db;Username=postgres;Password=postgres"
   },
 
   "Logging": {
